git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@1273 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/css/modalbox/facnomina/formaFacNomina.css
+++ b/erp-quimicos/src/main/webapp/css/modalbox/facnomina/formaFacNomina.css
@@ -196,6 +196,16 @@ table tr td.grid3 {
 	vertical-align: top;
 }
 
+table tr td.grid4 {
+	background: #fff;
+	/*border-right: 1px solid #ccc;*/
+	border:1px solid #C1DAD7;
+	font-size:11px; 
+	padding: 2px;
+	text-align: left;
+	vertical-align: top;
+}
+
 table tr td.grid_head {
 	background: #fff;
 	padding: 2px;
