--- a/erp-quimicos/src/main/webapp/vm/facnomina/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/facnomina/startup.vm
@@ -79,41 +79,36 @@
 			</tr>
 			<tr>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				<td width="70">Folio</td>
+				<td width="100">No. de Periodo</td>
 				<td width="20"></td>
-				<td width="180">Cliente</td>
+				<td width="200">Titulo del Periodo</td>
 				<td width="15"></td>
-				<td width="100">C&oacute;digo Producto</td>
-				<td width="15"></td>
-				<td width="150">Nombre Producto</td>
-				<td width="15"></td>
-				<td width="150">Agente</td>
+				
+				<td width="150">Tipo de Periodicidad</td>
 				<td width="20">&nbsp;</td>
 				<td width="25"></td>
-				<td colspan="3">Fecha de creaci&oacute;n</td>
+				<td colspan="3">Fecha de Pago</td>
 				<td width="20">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 				<td></td>
 				<td width="25"></td>
 				<td width="10">&nbsp;&nbsp;&nbsp;</td>
-				<td ></td>
+				<td></td>
 				<td width="10">&nbsp;&nbsp;&nbsp;</td>
 			</tr>
 			
 			<tr>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				<td width="70"><input type="text" name="busqueda_folio" style="width:70px;"></td>
+				<td width="100"><input type="text" name="busqueda_no_periodo" style="width:100px;"></td>
 				<td width="20"></td>
-				<td width="180"><input type="text" name="busqueda_cliente" style="width:180px;"></td>
+				<td width="200"><input type="text" name="busqueda_titulo_periodo" style="width:200px;"></td>
 				<td width="15"></td>
-				<td width="100"><input type="text" name="busqueda_codigo" style="width:100px;"></td>
-				<td width="15"></td>
-				<td width="150"><input type="text" name="busqueda_producto" style="width:150px;"></td>
-				<td width="15"></td>
-				<td id="td_agente">
-					<select name="busqueda_select_agente" style="width:150px;">
-						<option value="0" selected="yes">[-Seleccionar Agente-]</option>
+				
+				<td>
+					<select name="busqueda_select_tipo_periodo" style="width:150px;">
+						<option value="0" selected="yes">[-Seleccionar Tipo-]</option>
 					</select>
 				</td>
+				
 				<td width="20">&nbsp;</td>
 				<td width="25"><img src="../../img/catalogo/calendario.png" align="top"></td>
 				<td width="90"><input type="text" name="busqueda_fecha_inicial" style="width:90px;" readOnly="true"></td>
@@ -162,7 +157,7 @@
                 <div id="div_one" class="panelcito_modal facnomina_div_one"  style="display:none;" title="">
 					<input type="hidden" name="identificador">
 					<input type="hidden" name="accion">
-					
+					<input type="hidden" name="nivel_ejecucion">
 					
                     <div id="div_two" title="" class="facnomina_div_two">
                         <div class="columns on-2">
@@ -304,7 +299,7 @@
 															<td width="40"><div class="interrogacion"><img src="../../img/help-16x16.png" align="top" rel="warning_compperiodicidad"></div></td>
 															<td width="80">No.&nbsp;de&nbsp;Periodo</td>
 															<td width="120" colspan="2">
-																<select name="select_no_periodo" style="width:100px;" title="Numero de Periodo segun la Periodicidad de Pago"></select>
+																<select name="select_no_periodo" style="width:100px;" title="Numero de Periodo segun la Periodicidad de Pago"><option value="0">[-Seleccionar-]</option></select>
 																<input type="hidden" name="no_periodo_selec" value="0">
 															</td>
 															<!--<td width="80"></td>-->
@@ -320,9 +315,9 @@
 													<table class="tabla_header_grid">
 														<thead>
 															<tr>
-																<td class="grid_head" width="25">&nbsp;</td>
+																<td class="grid_head" width="50">&nbsp;</td>
 																<td class="grid_head" width="50">&nbsp;#</td>
-																<td class="grid_head" width="400">&nbsp;Nombre del Empleado</td>
+																<td class="grid_head" width="375">&nbsp;Nombre del Empleado</td>
 																<td class="grid_head" width="120">&nbsp;Total Percepciones</td>
 																<td class="grid_head" width="120">&nbsp;Total Deducciones</td>
 																<td class="grid_head" width="120">&nbsp;Neto a Pagar</td>
@@ -393,7 +388,7 @@
 
 
 
-			<div class="nominaempleado" style="display:none;">	
+			<div class="nominaempleado" style="display:none;">
 				<table width="100%" border="0" class="formaNominaEmpleado">
 					<tr>
 						<td>
@@ -427,26 +422,33 @@
 													<div class="columns" style="background:#731F6C;">
 														<div class="container" style="background:white;">
 															<div class="fixed column" class="content_x" >
-
+																
+																<input type="hidden" name="id_nom_det" value="0">
+																
 																<div id="tabx-1" class="contenidoPes">
 																	
 																	<table border="0" class="gral">
 																		<tr>
 																			<td width="140" height="10">No.&nbsp;de&nbsp;Empleado</td>
-																			<td width="150">
+																			<td width="50">
 																				<input type="hidden" name="id_empleado" value="0">
-																				<input type="text" name="no_empleado" value="" style="width:150px;">
+																				<input type="text" name="no_empleado" value="" style="width:50px;">
 																			</td>
-																			<td width="25"><div class="interrogacion"><img src="../../img/help-16x16.png" align="top" rel="warning_noempleado"></div></td>
-																			<td width="100">Nombre</td>
-																			<td width="390"><input type="text" name="nombre_empleado" value="" style="width:390px;"></td>
+																			<td width="40"><div class="interrogacion"><img src="../../img/help-16x16.png" align="top" rel="warning_noempleado"></div></td>
+																			<td width="40">RFC</td>
+																			<td width="120"><input type="text" name="rfc_empleado" value="" style="width:120px;"></td>
+																			<td width="40"><div class="interrogacion"><img src="../../img/help-16x16.png" align="top" rel="warning_rfcempleado"></div></td>
+																			
+																			<td width="70">Nombre</td>
+																			<td width="310"><input type="text" name="nombre_empleado" value="" style="width:310px;"></td>
 																			<td width="25"><div class="interrogacion"><img src="../../img/help-16x16.png" align="top" rel="warning_nombreempleado"></div></td>
 																		</tr>
+																		
 																		<tr>
-																			<td colspan="6" height="3"></td>
+																			<td colspan="9" height="3"></td>
 																		</tr>
 																		<tr>
-																			<td colspan="6" height="15">
+																			<td colspan="9" height="15">
 																				<div style="border:1px solid #81BEF7; height:450px; overflow:scroll; overflow-x:hidden; overflow-y:auto; width:860px;">
 																					
 																						<table border="0" class="gral">
@@ -668,22 +670,22 @@
 																										<tr>
 																											<td width="10"></td>
 																											<td width="140">Subtotal</td>
-																											<td width="100"><input type="text" name="comp_subtotal" value="" style="width:100px; text-align:right;"></td>
+																											<td width="100"><input type="text" name="comp_subtotal" value="" style="width:100px; text-align:right; font-weight:bold;"></td>
 																										</tr>
 																										<tr>
 																											<td width="10"></td>
 																											<td width="140">Descuento</td>
-																											<td width="100"><input type="text" name="comp_descuento" value="" style="width:100px; text-align:right;"></td>
+																											<td width="100"><input type="text" name="comp_descuento" value="" style="width:100px; text-align:right; font-weight:bold;"></td>
 																										</tr>
 																										<tr>
 																											<td width="10"></td>
 																											<td width="140">Total Impuesto Retenido</td>
-																											<td width="100"><input type="text" name="comp_retencion" value="" style="width:100px; text-align:right;"></td>
+																											<td width="100"><input type="text" name="comp_retencion" value="" style="width:100px; text-align:right; font-weight:bold;"></td>
 																										</tr>
 																										<tr>
 																											<td width="10"></td>
 																											<td width="140">Total</td>
-																											<td width="100"><input type="text" name="comp_total" value="" style="width:100px; text-align:right;"></td>
+																											<td width="100"><input type="text" name="comp_total" value="" style="width:100px; text-align:right; font-weight:bold;"></td>
 																										</tr>
 																									</table>
 																								</td>
@@ -731,8 +733,8 @@
 																												<td width="60"></td>
 																												<td width="200"></td>
 																												<td width="300" align="right"><strong>Total&nbsp;</strong></td>
-																												<td class="grid3" width="110"><input type="text" name="percep_total_gravado" value="" style="width:106px; text-align:right;"></td>
-																												<td class="grid3" width="120"><input type="text" name="percep_total_excento" value="" style="width:116px; text-align:right;"></td>
+																												<td class="grid3" width="110"><input type="text" name="percep_total_gravado" value="0.00" style="width:106px; text-align:right; font-weight:bold;"></td>
+																												<td class="grid3" width="120"><input type="text" name="percep_total_excento" value="0.00" style="width:116px; text-align:right; font-weight:bold;"></td>
 																											</tr>
 																										</tfoot>
 																									</table>
@@ -785,8 +787,8 @@
 																												<td width="60">&nbsp;</td>
 																												<td width="200"></td>
 																												<td width="300" align="right"><strong>Total&nbsp;</strong></td>
-																												<td class="grid3" width="110"><input type="text" name="deduc_total_gravado" value="" style="width:106px; text-align:right;"></td>
-																												<td class="grid3" width="120"><input type="text" name="deduc_total_excento" value="" style="width:116px; text-align:right;"></td>
+																												<td class="grid3" width="110"><input type="text" name="deduc_total_gravado" value="0.00" style="width:106px; text-align:right; font-weight:bold;"></td>
+																												<td class="grid3" width="120"><input type="text" name="deduc_total_excento" value="0.00" style="width:116px; text-align:right; font-weight:bold;"></td>
 																											</tr>
 																										</tfoot>
 																									</table>
