--- a/erp-quimicos/src/main/webapp/vm/facnomina/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/facnomina/startup.vm
@@ -318,7 +318,11 @@
 															<td width="80"></td>
 															<td width="40"></td>
 															<td width="80"></td>
-															<td width="150" align="right"><input type="button" id="genera_nomina" disabled value="Generar N&oacute;mina" style="width:120px; font-weight: bold;"></td>
+															<td width="150" align="right">
+																<input type="button" id="genera_nomina" disabled value="Generar N&oacute;mina" style="width:120px; font-weight: bold;">
+																<input type="hidden" name="generar">
+																<input type="hidden" name="id_generar">
+															</td>
 															<td width="40"></td>
 														</tr>
 													</table>
