--- a/erp-quimicos/src/main/webapp/vm/facnomina/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/facnomina/startup.vm
@@ -298,13 +298,11 @@
 															</td>
 															<td width="40"><div class="interrogacion"><img src="../../img/help-16x16.png" align="top" rel="warning_compperiodicidad"></div></td>
 															<td width="80">No.&nbsp;de&nbsp;Periodo</td>
-															<td width="120" colspan="2">
-																<select name="select_no_periodo" style="width:100px;" title="Numero de Periodo segun la Periodicidad de Pago"><option value="0">[-Seleccionar-]</option></select>
+															<td width="270" colspan="3">
+																<select name="select_no_periodo" style="width:270px;" title="Numero de Periodo segun la Periodicidad de Pago"><option value="0">[-Seleccionar-]</option></select>
 																<input type="hidden" name="no_periodo_selec" value="0">
 															</td>
-															<!--<td width="80"></td>-->
-															<td width="150"><div class="interrogacion"><img src="../../img/help-16x16.png" align="top" rel="warning_compnoperiodo"></div></td>
-															<td width="40"></td>
+															<td width="40"><div class="interrogacion"><img src="../../img/help-16x16.png" align="top" rel="warning_compnoperiodo"></div></td>
 														</tr>
 														<tr><td colspan="12" height="5"></td></tr>
 														<tr>
@@ -328,18 +326,26 @@
 													</table>
 												</td>
 											</tr>
-											
+											<!--
+												25
+												20
+												20
+												20
+											-->
 											<tr>
 												<td colspan="4" class="header_grid" style="border-top: 1px solid #C1DAD7; border-bottom: 1px solid #C1DAD7; border-left: 1px solid #FFFFFF; border-right: 1px solid #FFFFFF;">
 													<table class="tabla_header_grid">
 														<thead>
 															<tr>
+																<td class="grid_head" width="40" id="td_ocultar">&nbsp;#</td>
 																<td class="grid_head" width="50">&nbsp;#</td>
-																<td class="grid_head" width="50">&nbsp;#</td>
-																<td class="grid_head" width="375">&nbsp;Nombre&nbsp;del&nbsp;Empleado</td>
-																<td class="grid_head" width="120">&nbsp;Total&nbsp;Percepciones</td>
-																<td class="grid_head" width="120">&nbsp;Total&nbsp;Deducciones</td>
-																<td class="grid_head" width="120">&nbsp;Neto&nbsp;a&nbsp;Pagar</td>
+																<td class="grid_head" width="300">&nbsp;Nombre&nbsp;del&nbsp;Empleado</td>
+																<td class="grid_head" width="100">&nbsp;Total&nbsp;Percepciones</td>
+																<td class="grid_head" width="100">&nbsp;Total&nbsp;Deducciones</td>
+																<td class="grid_head" width="90">&nbsp;Neto&nbsp;a&nbsp;Pagar</td>
+																<td class="grid_head" width="40">&nbsp;#</td>
+																<td class="grid_head" width="40">&nbsp;#</td>
+																<td class="grid_head" width="60">&nbsp;#</td>
 															</tr>
 														</thead>
 													</table>
